--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -196,7 +196,7 @@
     "ROOTS = [root1, root2...]\n",
     "For example, if the roots are 1.3 and 2.2, say ROOTS = [1.3, 2.2].\n",
     "Make sure to use real numbers, not fractions.\n",
-    "{{/user}}\n",
+    "{{~/user}}\n",
     "\n",
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
