fixed system prompt in the rest of the notebook

--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -965,7 +965,7 @@
    ],
    "source": [
     "qa_attempt1 = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "\n",
     "{{#user~}}\n",
@@ -983,7 +983,7 @@
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
-    "qa_attempt1(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_attempt1(llm=chatgpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1043,7 +1043,7 @@
    ],
    "source": [
     "qa_attempt2 = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
@@ -1061,7 +1061,7 @@
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
-    "qa_attempt2(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_attempt2(llm=chatgpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1129,7 +1129,7 @@
    ],
    "source": [
     "qa_attempt3 = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
@@ -1157,7 +1157,7 @@
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
-    "qa_attempt3(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_attempt3(llm=chatgpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1238,7 +1238,7 @@
    ],
    "source": [
     "qa_attempt4 = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
@@ -1276,7 +1276,7 @@
     "{{#assistant~}}\n",
     "{{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
-    "qa_attempt4(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_attempt4(llm=chatgpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1348,7 +1348,7 @@
    ],
    "source": [
     "qa_guided = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "\n",
     "{{#user~}}\n",
@@ -1380,7 +1380,7 @@
     "Segment 3: {{gen 'segment3' temperature=0}}\n",
     "ANSWER: {{gen 'answer' temperature=0}}\n",
     "{{~/assistant~}}''')\n",
-    "qa_guided(llm=vicuna, system_prompt=vicuna_system, transcript=meeting_transcript, query=query1)"
+    "qa_guided(llm=vicuna, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1451,7 +1451,7 @@
     }
    ],
    "source": [
-    "qa_guided(llm=mpt, system_prompt=mpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_guided(llm=mpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1572,7 +1572,7 @@
    "outputs": [],
    "source": [
     "qa_attempt5 = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "You will read a meeting transcript, then extract the relevant segments to answer the following question:\n",
@@ -1693,7 +1693,7 @@
     }
    ],
    "source": [
-    "qa_attempt5(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query2)"
+    "qa_attempt5(llm=chatgpt, transcript=meeting_transcript, query=query2)"
    ]
   },
   {
@@ -1779,7 +1779,7 @@
     }
    ],
    "source": [
-    "qa_attempt5(llm=chatgpt, system_prompt=chatgpt_system, transcript=meeting_transcript, query=query1)"
+    "qa_attempt5(llm=chatgpt, transcript=meeting_transcript, query=query1)"
    ]
   },
   {
@@ -1846,7 +1846,7 @@
     }
    ],
    "source": [
-    "qa_guided(llm=vicuna, system_prompt=vicuna_system, transcript=meeting_transcript, query=query2)"
+    "qa_guided(llm=vicuna, transcript=meeting_transcript, query=query2)"
    ]
   },
   {
@@ -1988,7 +1988,7 @@
     }
    ],
    "source": [
-    "qa_attempt5(llm=chatgpt, system_prompt=chatgpt_system, transcript=transcript2, query=query3)"
+    "qa_attempt5(llm=chatgpt, transcript=transcript2, query=query3)"
    ]
   },
   {
@@ -2073,7 +2073,7 @@
     }
    ],
    "source": [
-    "qa_guided(llm=vicuna, system_prompt=vicuna_system, transcript=transcript2, query=query3)"
+    "qa_guided(llm=vicuna, transcript=transcript2, query=query3)"
    ]
   },
   {
@@ -2172,7 +2172,7 @@
    ],
    "source": [
     "query4 = 'Does Elon Musk insult the interviewer?'\n",
-    "qa_attempt5(llm=chatgpt, system_prompt=chatgpt_system, transcript=transcript2, query=query4)"
+    "qa_attempt5(llm=chatgpt, transcript=transcript2, query=query4)"
    ]
   },
   {
@@ -2257,7 +2257,7 @@
     }
    ],
    "source": [
-    "qa_guided(llm=vicuna, system_prompt=vicuna_system, transcript=transcript2, query=query4)"
+    "qa_guided(llm=vicuna,  transcript=transcript2, query=query4)"
    ]
   },
   {
@@ -2331,7 +2331,7 @@
    "source": [
     "import re\n",
     "terminal = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "Please complete the following task:\n",
@@ -2368,7 +2368,7 @@
     "{{~/user}}\n",
     "{{/geneach}}''')\n",
     "def run_task_chatgpt(task):\n",
-    "    t = terminal(llm=chatgpt, system_prompt=chatgpt_system, task=task)\n",
+    "    t = terminal(llm=chatgpt, task=task)\n",
     "    session = BashSession()\n",
     "    for _ in range(10):\n",
     "        # Extract command\n",
@@ -2506,7 +2506,7 @@
    "outputs": [],
    "source": [
     "guided_terminal = guidance('''{{#system~}}\n",
-    "{{system_prompt}}\n",
+    "{{llm.default_system_prompt}}\n",
     "{{~/system}}\n",
     "{{#user~}}\n",
     "Please complete the following task:\n",
@@ -2536,9 +2536,9 @@
     "{{~/assistant~}}''')\n",
     "def run_task_opensource(task, model='vicuna'):\n",
     "    if model == 'vicuna':\n",
-    "        t = guided_terminal(llm=vicuna, system_prompt=vicuna_system, task=task)\n",
+    "        t = guided_terminal(llm=vicuna, task=task)\n",
     "    elif model == 'mpt':\n",
-    "        t = guided_terminal(llm=mpt, system_prompt=mpt_system, task=task)\n",
+    "        t = guided_terminal(llm=mpt, task=task)\n",
     "    session = BashSession()\n",
     "    for _ in range(10):\n",
     "        command = t['commands'][-1]['command']\n",
@@ -2845,7 +2845,7 @@
     }
    ],
    "source": [
-    "    t = terminal(llm=chatgpt, system_prompt=chatgpt_system, task=task)\n",
+    "    t = terminal(llm=chatgpt, task=task)\n",
     "    session = BashSession()\n",
     "    for _ in range(10):\n",
     "        # Extract command\n",
