More tests and docs

--- a/notebooks/api_examples/llms/transformers/LLaMA.ipynb
+++ b/notebooks/api_examples/llms/transformers/LLaMA.ipynb
@@ -44,7 +44,7 @@
     "import guidance\n",
     "\n",
     "# replace your_path with a version of the LLaMA model\n",
-    "guidance.llm = guidance.llms.Transformers(\"your_path/llama-7b\", device=\"cpu\") # use cuda for GPU if you have >27GB of VRAM"
+    "guidance.llm = guidance.llms.transformers.LLaMA(\"your_path/llama-7b\", device=\"cpu\") # use cuda for GPU if you have >27GB of VRAM"
    ]
   },
   {
