--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -2586,11 +2586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vicuna is also able to solve the task. Besides privacy (we're not sending the session transcript to OpenAI), Vicuna has a significant advantage: the whole prompt is a single LLM run (and we even [accelerate](https://github.com/microsoft/guidance#guidance-acceleration-notebook) it by not having it geneate the output structure tokens like `COMMAND:`).   \n",
-    "\n",
-    "In contrast, we have to make a new call to ChatGPT for each command, which is slower and more expensive.\n",
-    "\n",
-    "Let's see how MPT does:"
+    "Vicuna is not able to solve the task this time. Let's see how MPT does:"
    ]
   },
   {
@@ -2646,9 +2642,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, MPT once again does not come up with the right answer.\n",
+    "Surprisingly, MPT works this time while Vicuna doesn't.\n",
     "\n",
-    "Let's try a different bash task with ChatGPT and Vicuna:"
+    "Besides privacy (we're not sending the session transcript to OpenAI), open source-models have a significant advantage: the whole prompt is a single LLM run (and we even [accelerate](https://github.com/microsoft/guidance#guidance-acceleration-notebook) it by not having it geneate the output structure tokens like `COMMAND:`).   \n",
+    "\n",
+    "In contrast, we have to make a new call to ChatGPT for each command, which is slower and more expensive.\n",
+    "\n",
+    "Let's try a different bash task with ChatGPT and Vicuna:\n"
    ]
   },
   {
@@ -3549,6 +3549,14 @@
    "source": [
     "shell = StatefulShellOpenSource()\n",
     "t = guided_terminal(llm=mpt, task=task, shell=shell)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, MPT fails this time, but calling the same command again and again (we had to interrupt to stop execution.)"
    ]
   },
   {
