Fix #47, and add a clearer error message

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -127,6 +127,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -697,7 +698,7 @@
    ],
    "source": [
     "# if we have multple GPUs we can load the chat model on a different GPU with the `device` argument\n",
-    "chat_llm = guidance.llms.Transformers(\"stabilityai/stablelm-tuned-alpha-3b\", device=1)"
+    "chat_llm = guidance.llms.transformers.StableLMChat(\"stabilityai/stablelm-tuned-alpha-3b\", device=1)"
    ]
   },
   {
