change display name back to 'base'

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -878,7 +878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "offering",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
