Added complete example and fixed formatting.

--- a/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
+++ b/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
@@ -48,6 +48,43 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# we can pre-define valid option sets\n",
+    "valid_weapons = [\"sword\", \"axe\", \"mace\", \"spear\", \"bow\", \"crossbow\"]\n",
+    "\n",
+    "# define the prompt\n",
+    "character_maker = guidance(\"\"\"The following is a character profile for an RPG game in JSON format.\n",
+    "```json\n",
+    "{\n",
+    "    \"id\": \"{{id}}\",\n",
+    "    \"description\": \"{{description}}\",\n",
+    "    \"name\": \"{{gen 'name' temperature=0.7}}\",\n",
+    "    \"age\": {{gen 'age' pattern='[0-9]+' max_tokens=2 stop=','}},\n",
+    "    \"armor\": \"{{#select 'armor'}}leather{{or}}chainmail{{or}}plate{{/select}}\",\n",
+    "    \"weapon\": \"{{select 'weapon' options=valid_weapons}}\",\n",
+    "    \"class\": \"{{gen 'class'}}\",\n",
+    "    \"mantra\": \"{{gen 'mantra' temperature=0.7}}\",\n",
+    "    \"strength\": {{gen 'strength' pattern='[0-9]+' max_tokens=2 stop=','}},\n",
+    "    \"items\": [{{#geneach 'items' num_iterations=5 join=', '}}\"{{gen 'this' temperature=0.7}}\"{{/geneach}}]\n",
+    "}```\"\"\")\n",
+    "\n",
+    "# generate a character\n",
+    "char = character_maker(\n",
+    "    id=\"e1f491f7-7ab8-4dac-8c20-c92b5e7d883d\",\n",
+    "    description=\"A quick and nimble fighter.\",\n",
+    "    valid_weapons=valid_weapons, llm=llama\n",
+    ")\n",
+    "\n",
+    "print(char)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
