updates to testing llms

--- a/notebooks/testing_lms.ipynb
+++ b/notebooks/testing_lms.ipynb
@@ -949,7 +949,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We don't need to stop after one round of organization though, we can ask the LLM to iterate on our work. This is actually a very good pattern: we use the LLM to generate ideas, select the best ideas, and then ask the LLM to generate more ideas based on our selection. \n"
+    "We don't need to stop after one round of organization though, we can ask the LLM to iterate on our work. This is actually a very good pattern: we use the LLM to generate ideas, select and tweak the best ideas, and then ask the LLM to generate more ideas based on our selection. \n"
    ]
   },
   {
@@ -1122,7 +1122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Generating inputs**"
+    "**Generating data**"
    ]
   },
   {
@@ -1130,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by simply asking ChatGPT to generate various kinds of emails:"
+    "We need some concrete data to test our model on (in our case, emails). We start by simply asking ChatGPT to generate various kinds of emails:"
    ]
   },
   {
@@ -1689,7 +1689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our test failed 53.3% of the time. Upon inspection, most of the failures have to do with the LLM not writing a response at all. While not directly related to its skills in writing full responses, it's good that this test caught this failure mode (which we could correct via better prompting). It often happens that testing one property reveals a failure elsewhere.\n",
+    "Our test failed 53.3% of the time. Upon inspection, most of the failures have to do with the LLM not writing a response at all. While not directly related to its skills in writing full responses, it's good that this test caught this failure mode (which we could correct via better prompting). It often happens that trying to test a capability reveals a failure elsewhere. \n",
     "\n",
     "Let's move on to evaluate the next use case."
    ]
@@ -1699,7 +1699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Use case 2: Make a draft more concise** "
+    "**Use case: Make a draft more concise** "
    ]
   },
   {
@@ -1897,8 +1897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "**Use case 3: Extracting action points from an incoming email.**"
+    "**Use case: Extracting action points from an incoming email.**"
    ]
   },
   {
@@ -2132,7 +2131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Those emails may have additional action items that are not related to watering the plants. However, this does not matter at all, as the property we're going to check is whether the tool extracts `watering the plants` as _one_ of the action items, not whether it is the only one:"
+    "These emails may have additional action items that are not related to watering the plants. However, this does not matter at all, as the property we're going to check is whether the tool extracts `watering the plants` as _one_ of the action items, not whether it is the only one:"
    ]
   },
   {
@@ -2216,10 +2215,10 @@
    "source": [
     "The failure rate is very high for this one! Of course, if we were testing for real we would have a variety of embedded action items (rather than just this one example)), and we would also check for other properties (e.g. whether the tool extracts _all_ action items, whether it extracts _only_ action items, etc).\n",
     "\n",
-    "**An example of metamorphic testing**  \n",
+    "**Metamorphic testing: robustness to instruction paraphrasing**  \n",
     "Let's switch gears a bit, and illustrate how we might do metamorphic testing (for this, we'll go back to our 60 emails).\n",
     "\n",
-    "We will test whether the model is robust to paraphrases in the instruction, by paraphrasing the instruction and verifying if the output list has the same items. Note that we are _not_ testing whether the output is correct, but whether the model is consistent in light of paraphrased instructions (which in itself is an important property). Note also that this is a toy example in that we only have one paraphrase, and that we would have many paraphrases of many instructions in practice."
+    "We will test the tool's robustness by paraphrasing the instruction and verifying if the output list has the same action items. Note that we are not testing whether the output is correct, but whether the model is consistent in light of paraphrased instructions (which in itself is an important property). Note also that this is a toy example in that we only have one paraphrase, and that we would have many paraphrases of many instructions in practice."
    ]
   },
   {
@@ -2757,10 +2756,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how failure rate is higher much higher, and it does seem like ChatGPT latched on to kind of a pattern (we don't have enough data yet to know whether it is a real pattern or not).\n",
-    "This is just a short illustration of a strategy that takes failures and gets a LLM to 'generate more'. We are very confident that this strategy work, because we have tried it in _a lot_ of different scenarios, models, and applications (with AdaTest).\n",
+    "Notice how failure rate is higher much higher.\n",
     "\n",
-    "In real testing, we would keep iterating on this process until we found real patterns, go back to the model (or in this case, the prompt) to fix the bugs, and then iterate again. But now it's time to wrap up this blog post."
+    "It does seem like ChatGPT latched on to kind of a pattern. While we don't have enough data yet to know whether it is a real pattern or not, this illustrates the strategy that takes failures and gets a LLM to 'generate more'. We are very confident that this strategy works, because we have tried it in a lot of different scenarios, models, and applications (with AdaTest).\n",
+    "In real testing, we would keep iterating on this process until we found real patterns, would go back to the model (or in this case, the prompt) to fix the bugs, and then iterate again. But now it's time to wrap up this blog post."
    ]
   },
   {
@@ -2769,7 +2768,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "Here is a TL;DR of this whole post (not written by ChatGPT, I promise):\n",
+    "Here is a TL;DR of this whole post (not written by ChatGPT, we promise):\n",
     "- **What we're saying:** We think it's a good idea to test LLMs just like we test software. Testing does not replace benchmarks, but complements them.  \n",
     "- **How to test:** If you can't specify a single right answer, and / or you don't have a labeled dataset, specify **properties** of the output or of groups of outputs. You can often use the LLM itself to evaluate such properties with high accuracy, since _perception is easier than generation_.  \n",
     "- **What to test:** Get the LLM to help you figure it out. Generate potential use cases and potential inputs, and then think of properties you can test. If you find bugs, get the LLM to drill down on them to find even more bugs.\n",
